force-app/main/default/objects/Offre__c/Offre__c.object-meta.xml
<CustomObject>
    <label>Offre</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offres</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>