force-app/main/default/objects/Offre__c/fields/Coupon__c.field-meta.xml
<CustomField>
    <fullName>Coupon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>test git</description>
    <label>Coupon</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Coupon__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>BtoC generique, BtoC multiples, BtoB, BtoC Nominatif Client, BtoC Nominatif Agent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Coupon__c</referenceTo>
    <relationshipLabel>Offres</relationshipLabel>
    <relationshipName>Offres</relationshipName>
    <type>Lookup</type>
</CustomField>