force-app/main/default/objects/Offre__c/fields/DateDebut2__c.field-meta.xml
<CustomField>
    <fullName>DateDebut2__c</fullName>
    <label>Date Debut2</label>
    <type>DateTime</type>
</CustomField>