force-app/main/default/objects/Offre__c/fields/Hermes_Intitule_Offre__c.field-meta.xml
<CustomField>
    <fullName>Hermes_Intitule_Offre__c</fullName>
    <description>champ permettant l&#39;affichage de l&#39;offre commercial sur Hermés en NL</description>
    <label>HermesIntituleOffreNL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>