force-app/main/default/objects/Offre__c/fields/HermesIntituleOffre__c.field-meta.xml
<CustomField>
    <fullName>HermesIntituleOffre__c</fullName>
    <description>affiche sur Hermes</description>
    <label>HermesIntituleOffre</label>
    <length>100</length>
    <type>Text</type>
</CustomField>