force-app/main/default/objects/Offre__c/fields/Intitule__c.field-meta.xml
<CustomField>
    <fullName>Intitule__c</fullName>
    <description>intitule facture et charge pour remplacer l intitule standard du catalogue</description>
    <label>Intitule</label>
    <length>255</length>
    <type>Text</type>
</CustomField>