force-app/main/default/objects/Offre__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <inlineHelpText>Determine si l offre est eligible pour ces operation, en general seul acquisition est eligible aux offres, la modification de ce champ est exceptionnel, il faudra se renseigne auprès de l administrateur des offres</inlineHelpText>
    <label>Operation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acquisition</fullName>
                <default>true</default>
                <label>Acquisition</label>
            </value>
            <value>
                <fullName>Renouvellement</fullName>
            </value>
            <value>
                <fullName>Migration</fullName>
            </value>
            <value>
                <fullName>retentionaccepte</fullName>
                <label>Retention accepte</label>
            </value>
            <value>
                <fullName>welcomeback</fullName>
                <label>Welcome back</label>
            </value>
            <value>
                <fullName>abotiers</fullName>
                <label>Abo Tiers</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>