force-app/main/default/objects/Offre__c/fields/Promo__c.field-meta.xml
<CustomField>
    <fullName>Promo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promo</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4) OR (5 AND 6) OR (7 AND 8) OR (9 AND 10)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Offre commerciale, Offre coupon</value>
        </filterItems>
        <filterItems>
            <field>Promo__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Promo des offres</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Abonnement de base</value>
        </filterItems>
        <filterItems>
            <field>Promo__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Abonnement de base</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Remise de base</value>
        </filterItems>
        <filterItems>
            <field>Promo__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Remise de base</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Frais de base</value>
        </filterItems>
        <filterItems>
            <field>Promo__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Frais de base</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Offre BTOB</value>
        </filterItems>
        <filterItems>
            <field>Promo__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Abonnement BTOB</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Promo__c</referenceTo>
    <relationshipLabel>Offres</relationshipLabel>
    <relationshipName>Offres</relationshipName>
    <type>Lookup</type>
</CustomField>