force-app/main/default/objects/Offre__c/fields/Reference__c.field-meta.xml
<CustomField>
    <fullName>Reference__c</fullName>
    <externalId>true</externalId>
    <label>Reference</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>