force-app/main/default/objects/Offre__c/recordTypes/Frais_de_base.recordType-meta.xml
<RecordType>
    <fullName>Frais_de_base</fullName>
    <active>true</active>
    <label>Frais de base</label>
</RecordType>