force-app/main/default/objects/Offre__c/recordTypes/Offre_BTOB.recordType-meta.xml
<RecordType>
    <fullName>Offre_BTOB</fullName>
    <active>true</active>
    <label>Offre BTOB</label>
</RecordType>