force-app/main/default/objects/Offre__c/recordTypes/Offre_commerciale.recordType-meta.xml
<RecordType>
    <fullName>Offre_commerciale</fullName>
    <active>true</active>
    <label>Offre commerciale</label>
</RecordType>