force-app/main/default/objects/Offre__c/recordTypes/Offre_coupon.recordType-meta.xml
<RecordType>
    <fullName>Offre_coupon</fullName>
    <active>true</active>
    <label>Offre coupon</label>
</RecordType>