force-app/main/default/objects/Offre__c/recordTypes/Remise_de_base.recordType-meta.xml
<RecordType>
    <fullName>Remise_de_base</fullName>
    <active>true</active>
    <label>Remise de base</label>
</RecordType>