force-app/main/default/objects/Offre__c/validationRules/Reference_Alphanumeric.validationRule-meta.xml
<ValidationRule>
    <fullName>Reference_Alphanumeric</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
  AND(
     ISNEW(),
     NOT(ISBLANK(Reference__c)),
     NOT(REGEX(Reference__c,&quot;^[a-zA-Z0-9_]*$&quot;))
   )
)</errorConditionFormula>
    <errorMessage>La reference doit contenir des lettres et/ou chiffres seulement.</errorMessage>
</ValidationRule>