force-app/main/default/objects/Offre__c/listViews/Abonnements_de_base.listView-meta.xml
<ListView>
    <fullName>Abonnements_de_base</fullName>
    <columns>NAME</columns>
    <columns>Promo__c</columns>
    <columns>DateDebut__c</columns>
    <columns>DateFin__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Reference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Offre__c.Abonnement_de_base</value>
    </filters>
    <label>Abonnements de base</label>
</ListView>