force-app/main/default/objects/Offre__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Reference__c</columns>
    <columns>NAME</columns>
    <columns>Promo__c</columns>
    <columns>DateDebut__c</columns>
    <columns>DateFin__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Operation__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>