force-app/main/default/objects/Offre__c/listViews/Charge_de_base.listView-meta.xml
<ListView>
    <fullName>Charge_de_base</fullName>
    <columns>NAME</columns>
    <columns>Promo__c</columns>
    <columns>DateDebut__c</columns>
    <columns>DateFin__c</columns>
    <columns>HermesIntituleOffre__c</columns>
    <columns>HermesIntituleOffreNL__c</columns>
    <columns>Intitule__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Offre__c.Frais_de_base</value>
    </filters>
    <label>Frais de base</label>
</ListView>