force-app/main/default/objects/Offre__c/listViews/Offres_BtoB.listView-meta.xml
<ListView>
    <fullName>Offres_BtoB</fullName>
    <columns>NAME</columns>
    <columns>Active__c</columns>
    <columns>Coupon__c</columns>
    <columns>DateDebut__c</columns>
    <columns>DateFin__c</columns>
    <columns>Promo__c</columns>
    <columns>Reference__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Offre__c.Offre_BTOB</value>
    </filters>
    <label>Offres BtoB</label>
</ListView>