force-app/main/default/objects/Offre__c/listViews/Offres_commerciales.listView-meta.xml
<ListView>
    <fullName>Offres_commerciales</fullName>
    <columns>NAME</columns>
    <columns>Promo__c</columns>
    <columns>HermesIntituleOffre__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>DateDebut__c</columns>
    <columns>DateFin__c</columns>
    <columns>Reference__c</columns>
    <columns>Active__c</columns>
    <columns>DateDebut2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Offre__c.Offre_commerciale</value>
    </filters>
    <label>Offres commerciales</label>
</ListView>