force-app/main/default/objects/Offre__c/listViews/OffresBtoB.listView-meta.xml
<ListView>
    <fullName>OffresBtoB</fullName>
    <columns>NAME</columns>
    <columns>Promo__c</columns>
    <columns>DateFin__c</columns>
    <columns>HermesIntituleOffre__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Offre__c.Offre_BTOB</value>
    </filters>
    <label>Offres BtoB</label>
</ListView>