force-app/main/default/objects/Offre__c/listViews/OffresDeBase.listView-meta.xml
<ListView>
    <fullName>OffresDeBase</fullName>
    <columns>NAME</columns>
    <columns>Promo__c</columns>
    <columns>DateDebut__c</columns>
    <columns>DateFin__c</columns>
    <columns>HermesIntituleOffre__c</columns>
    <columns>HermesIntituleOffreNL__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Offre__c.Remise_de_base</value>
    </filters>
    <label>Remises de base</label>
</ListView>