force-app/main/default/objects/Offre__c/listViews/OffresPromoCode.listView-meta.xml
<ListView>
    <fullName>OffresPromoCode</fullName>
    <columns>NAME</columns>
    <columns>Promo__c</columns>
    <columns>DateDebut__c</columns>
    <columns>DateFin__c</columns>
    <columns>HermesIntituleOffre__c</columns>
    <columns>HermesIntituleOffreNL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Offre__c.Offre_coupon</value>
    </filters>
    <label>Offres coupon</label>
</ListView>